--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,13 @@
   margin-top: 80px;
   padding: 20px;
 }
+.error{
+  margin-top: 20px;
+}
+.warning-icon{
+  color: red;
+  font-size: 3rem !important;
+}
 
 .MuiPaper-elevation1 {
   box-shadow: 0px 1px 10px 1px rgba(0, 0, 0, 0.2),
